Update model generation Update documentation Remove model from repo

--- a/Docs/Documentation.ipynb
+++ b/Docs/Documentation.ipynb
@@ -12,7 +12,7 @@
     "For instructions on running the solution, installation and clean-up, please see the README at the root of the project files.\n",
     "\n",
     "## Hypothesis\n",
-    "The hypothesis for our solution is that users can successfully be distinguished from a large class of bots based on the typing metrics of key held time, keystroke delay time, key overlap percentage and standard deviation of the first two values using unsupervised machine learning techniques.\n",
+    "Users can successfully be distinguished from a large class of bots based on the typing metrics of `average key held time`, `average keystroke delay time`, `key overlap percentage` and `standard deviation of the first two values` using unsupervised machine learning techniques.\n",
     "\n",
     "## Data Set Description\n",
     "We will source the data for this project from the \"136M Keystrokes\" data set available [here](https://userinterfaces.aalto.fi/136Mkeystrokes/). This data set contains the following fields:\n",
@@ -760,10 +760,10 @@
     "\n",
     "From our analysis we can make the following generalizations about typical typists:\n",
     "\n",
-    "* They should holdd their keys on average 68-154ms.\n",
-    "* The standard variation for that value should be between 22-58ms.\n",
-    "* They should type within about 200-600 strokes per minute.\n",
-    "* The variation in typing speed during a session varies significantly. But, it should in general be between 50-350ms.\n",
+    "* They typically hold their keys on average 68-154ms.\n",
+    "* The standard deviation for that value should be between 22-58ms.\n",
+    "* Their typing speed is typically on the order of about 200-600 strokes per minute.\n",
+    "* The standard deviation in typing speed during a session varies significantly. But, it should in general be between 50-350ms.\n",
     "* Fast typists oftentimes do, but sometimes don't overlap their key presses. Slow typists almost never do."
    ]
   },
@@ -776,20 +776,84 @@
     "\n",
     "For convenience, the original hypothesis is below:\n",
     "\n",
-    "> Users can successfully be distinguished from a large class of bots based on the typing metrics of key held time, keystroke delay time, key overlap percentage and standard deviation of the first two values using unsupervised machine learning techniques.\n",
+    "> Users can successfully be distinguished from a large class of bots based on the typing metrics of `average key held time`, `average keystroke delay time`, `key overlap percentage` and `standard deviation of the first two values` using unsupervised machine learning techniques.\n",
     "\n",
-    "Through our analysis, we have found that the metrics of average key held time and standard deviation of key held time seems to be a consistent across many users.\n",
-    "We found that the median / IQR was better suited for the key stroke delay than mean / standard deviation, but that it was also a consistent across many users.\n",
-    "Lastly, overlap percentage varies greatly among typists. We did find however, a very stark trend indicating that one could identify an anomaly is the key overlap was high but the typing speed was low.\n",
+    "Through our analysis, we have found that the metrics of `average key held time` and `standard deviation of key held time` seems to be a consistent across many users.\n",
+    "We found that the `median / IQR` was better suited for the key stroke delay than `mean / standard deviation`, but that it was also a consistent across many users.\n",
+    "Lastly, `overlap percentage` varies greatly among typists. We did find however, a very stark trend indicating that one could identify an anomaly if the key overlap was high but the typing speed was low.\n",
     "\n",
-    "Next, we need to use an unsupervised machine learning technique. Our data points for this set consist of five points each. As far as dimmensionality, this is reasonably low. Further, we want to detect anomalies. One unsupervised machine learning algorithm that meets these criteria is the Local Outlier Factor algorithm. We will implement a model for this and begin tuning the hyper parameters."
+    "In order to finish evaluating our hypothesis, we need to use an unsupervised machine learning technique. Our data points for this set consist of five points each. As far as dimmensionality, this is reasonably low. Further, we want to detect anomalies. One unsupervised machine learning algorithm that works well with low dimmensionality data and is good at identifying outliers is the Local Outlier Factor (LOF) algorithm. We will implement a model for this and begin tuning the hyper parameters."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5b34038a",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Hyper Parameter Tuning\n",
+    "\n",
+    "We will be using Scikit Learn's implementation of the LOF algorithm. The hyper parameters we will use for this are `n_neighbors` and `contamination`.\n",
+    "\n",
+    "Additionally, `novelty` will be set to `True` so that we can use the model for novelty detection on unseen data.\n",
+    "\n",
+    "To tune, we used two metrics:\n",
+    "1. How accurately can it identify bot users? \n",
+    "2. How accurately can it identify human users?\n",
+    "\n",
+    "For both of these metrics, we will use the score from the `decision_function()` to optimize the model. A higher score (positive) indicates it is more likely an inlier. A lower score (negative) indicates an outlier. Zero is the threshold as defined by the library for inlier/outlier decisions.\n",
+    "\n",
+    "To gather simulated bot data, we will use Puppeteer to access a text field that collects key stroke data. It will then try four different methods for key input. For human data, we will use a portion of the training data that was separated by the `train_test_split()` function.\n",
+    "\n",
+    "The results of these tests are as follows:\n",
+    "\n",
+    "| Test Case                                                | C(0.01), N(100) | C(0.01), N(50) | C(0.001), N(100) | C(0.001), N(50) |\n",
+    "|----------------------------------------------------------|-----------------|----------------|------------------|-----------------|\n",
+    "| Puppeteer (Instant Typing) [Score]                       | -7.689          | -7.958         | -7.045           | -7.194          |\n",
+    "| Puppeteer (Constant Delay) [Score]                       | -3.974          | -4.067         | -3.283           | -3.475          |\n",
+    "| Puppeteer (Slight Variable Delay) [Score]                | -2.862          | -2.886         | -2.205           | -2.253          |\n",
+    "| Puppeteer (Significantly Varied Delay) [Score]           | -2.426          | -2.670         | -1.772           | -2.120          |\n",
+    "| Sample Data (Human User Data) [Average Score, Std. Dev.] | 0.338, 0.102    | 0.318, 0.088   | 1.003, 0.102     | 0.943, 0.088    |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b203d91",
+   "metadata": {},
+   "source": [
+    "From these tests we can see that the contamination factor has a large impact on the scores. Both of the models with a contamination of 0.001 flag good data near 1.0 much more often than than the models with 0.01 contamination. Further, increasing the number of neighbors seems to yield higher scores in general. In general, we want to maximize the positive score so as to flag human users as non humans as infrequently as possible, even at the cost of a higher false negative rate. For this reason, we will select a `contamination` value of 0.001 and a `n_neighbors` of 100."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d70beaff",
+   "metadata": {},
+   "source": [
+    "## Hypothesis Acceptance Evaluation (Part three)\n",
+    "\n",
+    "As we can see from the table above, the automated bot script scored very low. Far below the threshold for rejection, which is any negative value. Further, humans scored well. To get full picture of its functionality one would have to conduct a trial with human participants. Though not adequate for a full study, I was able to score decently with this model as well.\n",
+    "\n",
+    "| Trial Number | Score  |\n",
+    "|--------------|--------|\n",
+    "| 1            | 0.968  |\n",
+    "| 2            | 1.054  |\n",
+    "| 3            | 0.731  |\n",
+    "| 4            | 1.035  |\n",
+    "| 5            | -0.043 |\n",
+    "| 6            | 0.990  |\n",
+    "| 7            | 0.889  |\n",
+    "| 8            | 0.970  |\n",
+    "| 9            | 0.199  |\n",
+    "| 10           | -0.216 |\n",
+    "\n",
+    "It is worth noting that test numbers 5 and 10 were technically failures. On these tests I had to go back and fix errors with arrow keys and pause before continuing. Additionally, I scored rather low for test number 9. This particular test was the shortest sentence of all of the inputs. It is possible that without a sufficiently long input, the values for spread and center are not accurate enough. Regardless, even the poorest scoring of my attempts did not come close to the nearest bot attempt.\n",
+    "\n",
+    "I think that the automated tests and my brief trials are enough to tentatively mark the hypothesis as a success. However, as mentioned in the other hypothesis evaluation sections, standard deviation and mean were not a good measure for center and spread for key input delay.\n",
+    "\n",
+    "Then, the conclusion we can draw is something more like this:\n",
+    "\n",
+    "> Users can successfully be distinguished from a large class of bots based on the typing metrics of `average key held time`, `median keystroke delay time`, `key overlap percentage`, `standard deviation of key held time` and `interquartile range of key delay time` using unsupervised machine learning techniques.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
